overflow fixed

--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@
 
 html, body {
   font-family: 'Poppins', sans-serif;
+  overflow-x: hidden;
   line-height: 1.6;
   font-weight: 400;
   margin: 0;
